--- a/SS Computer Shop Management System/pom.xml
+++ b/SS Computer Shop Management System/pom.xml
@@ -38,6 +38,11 @@
       <version>5.3.25</version>
     </dependency>
     <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>5.6.12.Final</version>
