--- a/SS Computer Shop Management System/pom.xml
+++ b/SS Computer Shop Management System/pom.xml
@@ -38,9 +38,9 @@
       <version>5.3.25</version>
     </dependency>
     <dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>javax.persistence-api</artifactId>
-      <version>2.2</version>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
